--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="manifest" href="manifest.json">
   <link rel="apple-touch-icon" href="icons/icon-180.png">
   <link rel="icon" href="icons/icon-192.png">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  
   <style>
     body { font-family: sans-serif; padding: 1em; }
     .forecast-row { display: flex; flex-wrap: wrap; gap: 1em; }
@@ -25,6 +25,7 @@
   </div>
   <div id="forecast" class="forecast-row"></div>
   <canvas id="weatherChart"></canvas>
+  <script src="./js/chart.js"></script>
 
   <script>
     let forecastDays = 7;
