--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </div>
   <div id="forecast" class="forecast-row"></div>
   <canvas id="weatherChart"></canvas>
-  <script src="./js/chart.js"></script>
+  <script src="js/chart.min.js"></script>
 
   <script>
     let forecastDays = 7;
