--- a/index.html
+++ b/index.html
@@ -65,6 +65,17 @@
 
     async function loadWeather(lat, lon) {
       const url = `https://api.open-meteo.com/v1/forecast?latitude=${lat}&longitude=${lon}&daily=snowfall_sum,temperature_2m_max,temperature_2m_min,precipitation_sum,showers_sum,shortwave_radiation_sum,sunshine_duration,relative_humidity_2m_max,relative_humidity_2m_min&timezone=auto&forecast_days=${forecastDays}`;
+      
+      async function getLocationName(lat, lon) {        
+        try {
+          const res = await fetch(`https://geocoding-api.open-meteo.com/v1/reverse?latitude=${lat}&longitude=${lon}`);
+          const data = await res.json();
+          return data?.results?.[0]?.name || `${lat.toFixed(2)}, ${lon.toFixed(2)}`;
+        } catch (e) {
+          return `${lat.toFixed(2)}, ${lon.toFixed(2)}`;
+        }
+      }
+      
       const response = await fetch(url);
       const data = await response.json();
 
