--- a/index.html
+++ b/index.html
@@ -73,12 +73,13 @@
 
   <div id="forecast"></div>
 
-  <h2>Temperatur & Regen</h2>
+  
+  <!-- <h2>Temperatur & Regen</h2> -->
   <div class="chart-container">
     <canvas id="weatherChart"></canvas>
   </div>
-
-    <h2>Sonnenscheindauer & Shower</h2>
+ <!--  <h2>Sonnenscheindauer & Shower</h2> -->
+   
   <div class="chart-container">
     <canvas id="weatherChart2"></canvas>
   </div>
