--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <canvas id="weatherChart2"></canvas>
   </div>
 
-
+<a href="https://open-meteo.com/">Weather data by Open-Meteo.com</a>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
